--- a/static/index.css
+++ b/static/index.css
@@ -2,7 +2,7 @@
     font-family: Helvetica, Arial, sans-serif;
     text-align: center;
   }
-  button {
+  #diceButton {
     background-color: rgb(82, 186, 179);
     border-radius: 6px;
     border: none;
@@ -12,7 +12,7 @@
     width: 200px;
     cursor: pointer;
   }
-  #placeholder {
+  #theResult {
     height: 100px;
     width: 100px;
     padding: 50px;
