--- a/static/index.css
+++ b/static/index.css
@@ -1,13 +1,13 @@
-
-Button {
+Button{
     background-color: rgb(0, 0, 0);
     border: none;
     color: rgb(255, 255, 255);
     padding: 10px;
     text-transform: uppercase;
     width: 600px;
+    cursor: pointer
   }
-  #theResult {
+#theResult{
     height: 100px;
     width: 100px;
     padding: 50px;
@@ -15,4 +15,5 @@ Button {
     border: 1px solid gray;
     border-radius: 10px;  
     font-size:80px;
+    text-align: center;
   }
