--- a/static/index.css
+++ b/static/index.css
@@ -1,4 +1,4 @@
-Button{
+button{
     background-color: rgb(0, 0, 0);
     border: none;
     border-radius: 6px;
@@ -6,6 +6,7 @@ Button{
     padding: 10px;
     text-transform: uppercase;
     width: 600px;
+    text-align: center;
   }
 #theResult{
     height: 100px;
