--- a/static/index.css
+++ b/static/index.css
@@ -4,8 +4,8 @@ button{
     border-radius: 6px;
     color: rgb(255, 255, 255);
     padding: 10px;
-    text-transform: uppercase;
     width: 600px;
+    cursor: pointer;
     text-align: center;
   }
 #theResult{
