--- a/static/index.css
+++ b/static/index.css
@@ -1,20 +1,23 @@
-button{
-    background-color: rgb(0, 0, 0);
-    border: none;
-    border-radius: 6px;
-    color: rgb(255, 255, 255);
-    padding: 10px;
-    width: 600px;
-    cursor: pointer;
+* {
+    font-family: Helvetica, Arial, sans-serif;
     text-align: center;
   }
-#theResult{
+  button {
+    background-color: rgb(82, 186, 179);
+    border-radius: 6px;
+    border: none;
+    color: rgb(255, 255, 255);
+    padding: 10px;
+    text-transform: uppercase;
+    width: 200px;
+    cursor: pointer;
+  }
+  #placeholder {
     height: 100px;
     width: 100px;
     padding: 50px;
     margin: 50px auto;
-    border: 1px;
-    border-radius: 5x;  
+    border: 1px solid gray;
+    border-radius: 10px;  
     font-size:80px;
-    text-align: center;
   }
