--- a/static/index.css
+++ b/static/index.css
@@ -12,7 +12,7 @@
     width: 200px;
     cursor: pointer;
   }
-  #placeholder {
+  #ph {
     height: 100px;
     width: 100px;
     padding: 50px;
