--- a/static/index.css
+++ b/static/index.css
@@ -1,8 +1,8 @@
   button {
-    background-color: rgb(0, 0, 0);
+    background-color:  black;
     border-radius: 6px;
     border: none;
-    color: rgb(255, 255, 255);
+    color: white;
     padding: 10px;
     text-transform: uppercase;
     width: 100px;
@@ -10,7 +10,7 @@
   #ph {
     height: 100px;
     width: 100px;
-    border: 1px solid gray;
+    border: 1px black;
     border-radius: 10px;  
     font-size:60px;
   }
