--- a/static/index.css
+++ b/static/index.css
@@ -10,6 +10,7 @@
     height: 100px;
     width: 100px;
     border: 2px black;
+    border-style: solid;
     border-radius: 10px;  
     font-size:60px;
   }
